--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,9 @@
                             <a class="nav-link" href="{{ url_for('products') }}">المنتجات</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('design_yourself') }}">صمم بنفسك</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('about') }}">عن المتجر</a>
                         </li>
                         <li class="nav-item">
